Add initial automated readme docs

--- a/README.hbs
+++ b/README.hbs
@@ -79,15 +79,4 @@ Coming soon.
 
 ## API
 
-<a name="setupBusiness"></a>
-
-## setupBusiness([businessDays], [holidayMatchers])
-Sets up business days and holiday matchers.
-
-**Kind**: global function  
-
-| Param | Type | Default | Description |
-| --- | --- | --- | --- |
-| [businessDays] | <code>Array.&lt;number&gt;</code> | <code>DEFAULT_BUSINESS_DAYS</code> | The working business days for the business. |
-| [holidayMatchers] | <code>Array.&lt;function()&gt;</code> | <code>DEFAULT_HOLIDAY_MATCHERS</code> | The holiday matchers used to check if a particular day is a holiday for the business. |
-
+{{>main}}
