Update readme + docs

--- a/README.hbs
+++ b/README.hbs
@@ -93,6 +93,10 @@ dt = dt.plusBusiness({ days: 2 }); // 7/9/19 - Tuesday (Skipped through Saturday
 // Now do what you normally would with a DateTime instance.
 ```
 
+## Examples
+
+* [Display a range of business days in future](https://codesandbox.io/s/luxon-business-days-range-example-tmb1d).
+
 ## API
 
 {{>main}}
